--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ jdcal==1.4.1
 Jinja2==2.11.3
 kombu==5.0.2
 MarkupSafe==1.1.1
-numpy==1.20.1
+numpy>=1.19
 openpyxl==3.0.6
 playwright==1.9.1
 prompt-toolkit==3.0.16
